# geo-utility

./: .gitignore  Cargo.toml  README.md
benches/: collect_bounding_bench.rs  collect_convex_bench.rs  concat_and_scale.rs  concatenate_features_bench.rs  concatenate_features_bench_seeded.rs  domain_bench.rs  processor_bench.rs  raw_bench.rs  raw_parallel_bench.rs  scale_building_bench.rs  simple_bench.rs
src/: bounding_box_test.rs  collect_bounding_boxes.rs  collect_convex_boundingboxes.rs  concat_and_scale.rs  concatenate_features.rs  domain.rs  extend_features.rs  extend_straight_line.rs  generate_synthetic_complex_featurecollection.rs  generate_synthetic_featurecollection.rs  generate_synthetic_linestrings.rs  geometry.rs  grouping.rs  lib.rs  main.rs  pick_features_by_boundingbox.rs  process_vertices_and_bends.rs  raw.rs  raw_parallel.rs  raw_serde.rs  remove_near_points.rs  scale_buildings.rs  utils.rs
src/generation/: complex.rs  deterministic_data_concatenate.rs  deterministic_data_concatenate_seeded.rs  deterministic_feature_collection.rs  featurecollection.rs  generate.rs  generate_closeness_sample.rs  generate_complex_sample.rs  generate_curves_sample.rs  mod.rs
src/geometry/: bounding_box.rs  convex_hull.rs  mod.rs  scaling.rs
src/processing/: extend_features.rs  extend_straight_line.rs  grouping.rs  mod.rs  pick_features_by_boundingbox.rs  process_vertices_and_bends.rs  remove_near_points.rs
src/utils/: error.rs  geometry.rs  mod.rs  utils.rs
