[package]
name = "geo-utility"
version = "0.1.0"
edition = "2024"

[dependencies]
proj = "0.28.0"
geojson = "0.24.2"
serde_json = "1.0"
geo = "0.30.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
rstar = "0.12.2"
ordered-float = "2.0"
union-find = "0.4.3"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "processor_bench"
path = "benches/processor_bench.rs"
harness = false

[[bench]]
name = "scale_building_bench"
path = "benches/scale_building_bench.rs"
harness = false

[[bench]]
name = "collect_convex_bench"
path = "benches/collect_convex_bench.rs"
harness = false

[[bench]]
name = "collect_bounding_bench"
path = "benches/collect_bounding_bench.rs"
harness = false

[[bench]]
name = "domain_bench"
path = "benches/domain_bench.rs"
harness = false

[[bench]]
name = "raw_bench"
path = "benches/raw_bench.rs"
harness = false

[[bench]]
name = "raw_parallel_bench"
path = "benches/raw_parallel_bench.rs"
harness = false

[profile.bench]
debug = true
